--- a/CIA.ipynb
+++ b/CIA.ipynb
@@ -1,106 +1,314 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.6.1"
-    },
-    "colab": {
-      "name": "Basics.ipynb",
-      "provenance": []
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "bXpui4Toc8Uq"
+   },
+   "source": [
+    "# Introduction"
+   ]
   },
-  "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Normally, we would be doing our querying in a DBMS, but for the sake of showcasing, SQL queries on this database will be done in Jupyter Labs\n",
+    "- To run SQL queries in Jupyter, we have to add %%sql on its own line to the start of our query.\n",
+    "- We'll be doing this for every query we make, and are using jupyter for reproducability."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Connecting to database and installing necessary packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import necessary packages\n",
+    "import pandas as pd\n",
+    "import sqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "cDZc0ODcc-8T"
+   },
+   "outputs": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "bXpui4Toc8Uq",
-        "colab_type": "text"
-      },
-      "source": [
-        "# Introduction"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "cDZc0ODcc-8T",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "%%capture\n",
-        "%load_ext sql\n",
-        "%sql sqlite:///factbook.db"
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>name</th>\n",
+       "      <th>tbl_name</th>\n",
+       "      <th>rootpage</th>\n",
+       "      <th>sql</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>table</td>\n",
+       "      <td>sqlite_sequence</td>\n",
+       "      <td>sqlite_sequence</td>\n",
+       "      <td>3</td>\n",
+       "      <td>CREATE TABLE sqlite_sequence(name,seq)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>table</td>\n",
+       "      <td>facts</td>\n",
+       "      <td>facts</td>\n",
+       "      <td>47</td>\n",
+       "      <td>CREATE TABLE \"facts\" (\"id\" INTEGER PRIMARY KEY...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Ltd4LBDYdJ_W",
-        "colab_type": "text"
-      },
-      "source": [
-        "# Overview of the Data"
+      "text/plain": [
+       "    type             name         tbl_name  rootpage  \\\n",
+       "0  table  sqlite_sequence  sqlite_sequence         3   \n",
+       "1  table            facts            facts        47   \n",
+       "\n",
+       "                                                 sql  \n",
+       "0             CREATE TABLE sqlite_sequence(name,seq)  \n",
+       "1  CREATE TABLE \"facts\" (\"id\" INTEGER PRIMARY KEY...  "
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "YXEO4sKzdLsk",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 85
-        },
-        "outputId": "7f5d7073-4d4d-43a6-92aa-b28ec27ce9f1"
-      },
-      "source": [
-        "%%sql\n",
-        "SELECT * FROM facts limit 5;"
-      ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            " * sqlite:///factbook.db\n",
-            "(sqlite3.OperationalError) no such table: facts\n",
-            "[SQL: SELECT * FROM facts limit 5;]\n",
-            "(Background on this error at: http://sqlalche.me/e/e3q8)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "AvB8KY2kdPUw",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-  ]
+   ],
+   "source": [
+    "# This is the workflow for working with SQL in python. You have to:\n",
+    "# establish a connection to the database\n",
+    "# instantiate a cursor class to \"navigate\" the database\n",
+    "# execute queries on the database using the cursor, combining SQL and python to do so.\n",
+    "\n",
+    "conn = sqlite3.connect(\"factbook.db\")\n",
+    "q1 = \"SELECT * FROM sqlite_master WHERE type='table';\"\n",
+    "r = conn.cursor()\n",
+    "\n",
+    "# turning the results of every query into a pandas dataframe makes it more readable.\n",
+    "pd.read_sql_query(q1, conn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "Ltd4LBDYdJ_W"
+   },
+   "source": [
+    "# Overview of the Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 85
+    },
+    "colab_type": "code",
+    "id": "YXEO4sKzdLsk",
+    "outputId": "7f5d7073-4d4d-43a6-92aa-b28ec27ce9f1"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>code</th>\n",
+       "      <th>name</th>\n",
+       "      <th>area</th>\n",
+       "      <th>area_land</th>\n",
+       "      <th>area_water</th>\n",
+       "      <th>population</th>\n",
+       "      <th>population_growth</th>\n",
+       "      <th>birth_rate</th>\n",
+       "      <th>death_rate</th>\n",
+       "      <th>migration_rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>af</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>652230</td>\n",
+       "      <td>652230</td>\n",
+       "      <td>0</td>\n",
+       "      <td>32564342</td>\n",
+       "      <td>2.32</td>\n",
+       "      <td>38.57</td>\n",
+       "      <td>13.89</td>\n",
+       "      <td>1.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>al</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>28748</td>\n",
+       "      <td>27398</td>\n",
+       "      <td>1350</td>\n",
+       "      <td>3029278</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>12.92</td>\n",
+       "      <td>6.58</td>\n",
+       "      <td>3.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>ag</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>2381741</td>\n",
+       "      <td>2381741</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39542166</td>\n",
+       "      <td>1.84</td>\n",
+       "      <td>23.67</td>\n",
+       "      <td>4.31</td>\n",
+       "      <td>0.92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>an</td>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>468</td>\n",
+       "      <td>468</td>\n",
+       "      <td>0</td>\n",
+       "      <td>85580</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>8.13</td>\n",
+       "      <td>6.96</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>ao</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>1246700</td>\n",
+       "      <td>1246700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19625353</td>\n",
+       "      <td>2.78</td>\n",
+       "      <td>38.78</td>\n",
+       "      <td>11.49</td>\n",
+       "      <td>0.46</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id code         name     area  area_land  area_water  population  \\\n",
+       "0   1   af  Afghanistan   652230     652230           0    32564342   \n",
+       "1   2   al      Albania    28748      27398        1350     3029278   \n",
+       "2   3   ag      Algeria  2381741    2381741           0    39542166   \n",
+       "3   4   an      Andorra      468        468           0       85580   \n",
+       "4   5   ao       Angola  1246700    1246700           0    19625353   \n",
+       "\n",
+       "   population_growth  birth_rate  death_rate  migration_rate  \n",
+       "0               2.32       38.57       13.89            1.51  \n",
+       "1               0.30       12.92        6.58            3.30  \n",
+       "2               1.84       23.67        4.31            0.92  \n",
+       "3               0.12        8.13        6.96            0.00  \n",
+       "4               2.78       38.78       11.49            0.46  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# let's take a look at the first five rows of the db to get acquainted.\n",
+    "# from the code above, we know the table is called 'facts'\n",
+    "q2 = 'SELECT * FROM facts limit 5;'\n",
+    "\n",
+    "pd.read_sql_query(q2,conn)"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "name": "Basics.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
